compiler-tests/src/test/data/diagnostic/cycles/ProvidesSccShouldNotCrashReporter.ir.diag.txt
/ProvidesSccShouldNotCrashReporter.kt:12:11: error: 
[Metro/DependencyCycle] Found a dependency cycle while processing AppGraph

  cycle:
      +-> B -> A --+
      +------------+

  trace (in AppGraph):
      B is injected at AppGraph.provideA(…, b)
      A is injected at AppGraph.provideB(…, a)
      B is injected at AppGraph.provideA(…, b)
      ...

  help: you can break the cycle by injecting a deferred type at one edge, e.g. `() -> B` or
        `Lazy<B>`. Only do this if you know what you're doing though!
  docs: https://zacsweers.github.io/metro/latest/diagnostics/#dependencycycle

